@@ -1,5 +1,7 @@
 #VERSION 0.9.2#
  
+ - modified method __construct() from Peak_Application_Modules to use newly created method in Peak_Application 
+ - added 2 methods in Peak_Application to clean up method __construct()
  - removed property $_ctrl_name in Peak_Application_Modules and refactored method prepare()
  - fixed two small bugs in Peak_View_Helper_Debugbar
  - fixed method cleanArray() in Peak_Model_Zendatable to force Zend_db to describe table. This prevents
